# blinker_pyblinker_validation

./: .gitignore  Project_Execution_Flowchart.md  blink_eval_groundtruth_vs_blinker_pyblinker.py  call_app.py  call_app_murat_ui.py  call_app_raja_ui.py  cleanup_pyblinker.py  config_video_detail.json  execute_the_test.py  murat_2018_dataset.txt  open_mat.py  pyproject.toml  requirements.txt  runx_test.py  setup.py
.github/workflows/: unit-tests.yml
config/: config.yaml  dataset_paths.json  inspect_config.yaml  raja_path_pairs.yaml
murat_sequence/: complete_workflow_all_steps.py  step1_prepare_dataset.py  step2_pyblinker.py  step3_run_blinker.py  step4_compare_.py  step4_compare_pyblinker_vs_blinker.py  step5_compare_viz_vs_pyblinker.py  step5_create_ground_truth.py  step6_compare_viz_vs_blinker.py
raja_sequence/: helper.py  main.py
src/: __init__.py  init_eeglab_blinker.m  mat_Script.py  run_blinker_pipeline_wrap.m  run_tutorial.m  test_helper.py
src/helper/: __init__.py  gdrive_downloader.py
src/matlab/: matlab_output.mat
src/matlab_runner/: convert_fif_to_edf.py  execute_blinker.py  (+6 more)
tests/: diagnose_s13_annotations.py  test_annotation_import.py  test_path_pairs.py  test_status_sorting.py  test_status_store.py
tutorial/: 1_basic_usage.py  CLA-SubjectJ-170510-3St-LRHand-Inter_annotations.csv  blink_eda.py  extract_blinker.py  extract_pyblinker.py  how_to_run_pyblinker.py  process_sample_edf.py  with_mat_example_comparison.py
unitest/: conftest.py  test_download_dataset.py  test_gdrive_downloader.py  test_murat_sequence.py  test_step1_prepare_dataset.py
(+44 files in other folders)
