[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blinker-pyblinker-validation"
version = "0.1.1"
description = "Utilities for validating PyBlinker outputs against MATLAB Blinker results."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
