[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blinker-pyblinker-validation"
version = "0.1.29"
description = "Utilities for validating PyBlinker outputs against MATLAB Blinker results."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
